--- a/src/Components/LoaderJson.css
+++ b/src/Components/LoaderJson.css
@@ -67,3 +67,16 @@
 .bolderInfo{
     font-weight: 500;
 }
+.pointer{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 300px;
+    height: 300px;
+    background-color: white;
+    border-radius: 50%;
+    transition: 0.000s ease-in;
+    z-index: 6;
+    mix-blend-mode: difference;
+}
