--- a/src/Components/LoaderJson.css
+++ b/src/Components/LoaderJson.css
@@ -68,9 +68,10 @@
     font-weight: 500;
 }
 .pointer{
+    opacity: 0;
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 10%;
+    left: 10%;
     transform: translate(-50%, -50%);
     width: 300px;
     height: 300px;
@@ -79,4 +80,7 @@
     transition: 0.000s ease-in;
     z-index: 6;
     mix-blend-mode: difference;
+}
+.containerLoader{
+    text-align: center;
 }
