--- a/src/Components/LoaderJson.css
+++ b/src/Components/LoaderJson.css
@@ -75,7 +75,7 @@
     transform: translate(-50%, -50%);
     width: 300px;
     height: 300px;
-    background-color: white;
+    background-color: #fff;
     border-radius: 50%;
     transition: 0.000s ease-in;
     z-index: 6;
@@ -83,4 +83,7 @@
 }
 .containerLoader{
     text-align: center;
+}
+.countStyle{
+   opacity: 1;
 }
