changing style font title and header post

--- a/src/Components/main.scss
+++ b/src/Components/main.scss
@@ -12,7 +12,7 @@
 @mixin heding-text  {
     position: relative;
     font-weight: 600;
-    font-size: 25px;
+    font-size: 0.8em;
     text-transform: uppercase;     
 }
 //another code css
