--- a/src/Components/main.css
+++ b/src/Components/main.css
@@ -35,7 +35,7 @@
 .headingText {
   position: relative;
   font-weight: 600;
-  font-size: 25px;
+  font-size: 0.8em;
   text-transform: uppercase;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
@@ -51,7 +51,7 @@
   transform: scale(1);
   position: relative;
   font-weight: 600;
-  font-size: 25px;
+  font-size: 0.8em;
   text-transform: uppercase;
 }
 
