--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -7,11 +7,13 @@
   position: absolute;
   top: 50%;
   left: 10%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   width: 300px;
   height: 300px;
   background-color: #fff;
   border-radius: 50%;
+  -webkit-transition: 0.000s ease-in;
   transition: 0.000s ease-in;
   z-index: 6;
   mix-blend-mode: difference;
@@ -22,8 +24,12 @@
 }
 
 .containerLoader .thumb .containerPost {
-  justify-content: center;
-  align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  display: -ms-grid;
   display: grid;
 }
 
@@ -37,7 +43,8 @@
   font-weight: 600;
   font-size: 0.8em;
   text-transform: uppercase;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+          box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
 
 .headingText2 {
@@ -79,3 +86,4 @@
 .countStyle {
   opacity: 1;
 }
+/*# sourceMappingURL=main.css.map */
