--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,9 +1,9 @@
 //mixins
 @mixin transition-text{
     -webkit-transition: all 200ms ease-in;
-    -webkit-transform: scale(1); 
+    -webkit-transform: scale(1);
     -ms-transition: all 200ms ease-in;
-    -ms-transform: scale(1); 
+    -ms-transform: scale(1);
     -moz-transition: all 200ms ease-in;
     -moz-transform: scale(1);
     transition: all 200ms ease-in;
@@ -13,12 +13,29 @@
     position: relative;
     font-weight: 600;
     font-size: 0.8em;
-    text-transform: uppercase;     
+    text-transform: uppercase;
 }
-//another code css
-.containerLoader{
+//end of mixins
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+
+.container-loader {
     text-align: center;
-    .pointer{    
+
+    .pointer {
         opacity: 0;
         position: absolute;
         top: 50%;
@@ -32,45 +49,77 @@
         z-index: 6;
         mix-blend-mode: difference;
     }
-    .thumb{
+
+    .thumb {
         background-color: #bdbdbd !important;
-        .containerPost{
+
+        .container-post {
             justify-content: center;
             align-content: center;
             display: grid;
         }
     }
 }
-.backgroundCard{
+
+.background-card {
     background-color: #fff3e0 !important;
     max-width: 1200px;
 }
-.headingText{
+
+.heading-text {
     @include heding-text;
     box-shadow: 5px 5px 5px rgba(0,0,0,.5);
 }
-.headingText2{
+
+.heading-text-next {
     @include transition-text;
-    @include heding-text; 
-    &:hover{
+    @include heding-text;
+
+    &:hover {
         -webkit-transition: all 200ms ease-in;
         -webkit-transform: scale(1.03);
         -ms-transition: all 200ms ease-in;
-        -ms-transform: scale(1.03);   
+        -ms-transform: scale(1.03);
         -moz-transition: all 200ms ease-in;
         -moz-transform: scale(1.03);
         transition: all 200ms ease-in;
-        transform: scale(1.03);     
+        transform: scale(1.03);
     }
 }
-.notesMain{
+
+.notes-main {
     padding: 1em;
     text-indent: 1.5em;
     font-size: 15px;
 }
-.bolderInfo{
+
+.bolder-info {
     font-weight: 500;
 }
-.countStyle{
+
+.count-style {
    opacity: 1;
+}
+
+.container-app {
+  background-color: #bdbdbd;
+
+  .title-page{
+    font-size: 180%;
+    padding: 2em;
+    text-align: center;
+    font-weight: bold;
+    color: #424242;
+  }
+}
+
+.footer {
+    text-align: center;
+    color: #1a237e !important;
+    padding: 2em 0 2em 0;
+    width: auto;
+}
+
+.hide-text{
+   color: #bdbdbd;
 }
