delet not used code

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -115,7 +115,7 @@ code {
 
 .footer {
     text-align: center;
-    color: #1a237e !important;
+    color: darkred !important;
     padding: 2em 0 2em 0;
     width: auto;
 }
